--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: php
-
+dist: trusty
 php:
+  - "7.1"
+  - "7.0"
   - "5.6"
   - "5.5"
   - "5.4"
-  - "5.3"
   - "hhvm"
   - "hhvm-nightly"
 
@@ -14,8 +15,9 @@ branches:
 
 matrix:
   allow_failures:
-    - php: hhvm
-    - php: hhvm-nightly
+    - php: "5.4"
+    - php: "hhvm"
+    - php: "hhvm-nightly"
 
 branches:
   except:
@@ -23,8 +25,8 @@ branches:
 
 before_script:
   - composer self-update
-  - composer require satooshi/php-coveralls:dev-master --no-update
-  - composer install --dev
+  - composer require satooshi/php-coveralls --no-update
+  - composer install
 
 script: ./vendor/bin/phpunit --coverage-text
 
